--- a/AuthSystem/Areas/Identity/Pages/Admin/Delete.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Delete.cshtml
@@ -4,11 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-<!-- Load Bootstrap's JavaScript bundle -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 
-<link rel="stylesheet" href="~/css/Admin/adminDelete.css"> <!-- Link to your custom CSS file -->
+<link rel="stylesheet" href="~/css/Admin/adminDelete.css">
 
 <div class="container">
     <div class="text-left">
@@ -20,6 +18,14 @@
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control input-small" readonly />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.FirstName"></label>
+                    <input asp-for="Input.FirstName" class="form-control input-small" readonly />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.LastName"></label>
+                    <input asp-for="Input.LastName" class="form-control input-small" readonly />
                 </div>
                 <button type="submit" class="btn btn-danger">Delete</button>
             </form>
