--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -32,8 +32,12 @@
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Home</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Home" asp-action="Chat">Chat</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">User Management</a>
                                 </li>
+
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/UserActivity">User Activity</a>
                                 </li>
